# file2config

./: .gitignore  README.rst  meson.build
data/: SUSE-configuration.json  ignored_files.json
f2c_cli/: OutputFormatter.h  main.cpp  meson.build
f2c_create_db/: BranchProcessor.cpp  BranchProcessor.h  BranchProps.cpp  BranchProps.h  Configs.h  F2CSQLConn.cpp  F2CSQLConn.h  Ignores.cpp  Ignores.h  Opts.cpp  Opts.h  Renames.cpp  Renames.h  StatusNotifier.h  Verbose.cpp  Verbose.h  main.cpp  meson.build
f2c_create_db/parser/: ErrorListener.cpp  ErrorListener.h  MakeExprListener.cpp  MakeExprListener.h  Parser.cpp  Parser.h  meson.build
f2c_create_db/parser/TestRig/: .gitignore  Makefile
f2c_create_db/parser/kconfig/: Config.h  KconfigLexer.g4  KconfigParser.g4  KconfigParserConfigListener.cpp  KconfigParserConfigListener.h  Parser.cpp  Parser.h  meson.build
f2c_create_db/parser/make/: EntryVisitor.h  MakeExprListener.cpp  MakeLexer.g4  MakeParser.g4  MakeParserExprListener.cpp  MakeParserExprListener.h  Parser.cpp  Parser.h  meson.build
f2c_create_db/sql/: F2CSQLConn.cpp  F2CSQLConn.h  meson.build
f2c_create_db/treewalker/: ConsoleMakeVisitor.h  MakeVisitor.h  SQLiteMakeVisitor.cpp  SQLiteMakeVisitor.h  TreeWalker.cpp  TreeWalker.h  meson.build
scripts/: f2c_compare_db  f2c_create_db
src/: Verbose.cpp  Verbose.h  main.cpp  meson.build
src/parser/: EntryCallback.h  EntryVisitor.h  ErrorListener.cpp  ErrorListener.h  Make.g4  MakeExprListener.cpp  MakeExprListener.h  Parser.cpp  Parser.h  meson.build  parser.cpp  parser.h
src/sql/: F2CSQLConn.cpp  F2CSQLConn.h  SQLConn.cpp  SQLConn.h  meson.build
src/treewalker/: ConsoleMakeVisitor.h  MakeVisitor.h  SQLiteMakeVisitor.cpp  SQLiteMakeVisitor.h  TreeWalker.cpp  TreeWalker.h  meson.build  treewalker.cpp  treewalker.h
tests/: meson.build  test_parser.cpp
tests/makefiles/: Makefile.functions
